--- a/css/style.css
+++ b/css/style.css
@@ -197,8 +197,11 @@ body{
 
 .conteiner1 .sidebar div.partners{
 	padding: 500%;
-	height: 50%;
+	height: 500%;
 }
+
+#10
+#50
 
 .conteiner1 .sidebar div.partners img{
 	width: 60%;
