--- a/css/style.css
+++ b/css/style.css
@@ -333,9 +333,14 @@ body{
 
 	
 .conteiner1 .sidebar{
-	padding: 0;
+	padding: 100;
 	height: 100%;
 }
+
+#0
+#100
+
+
 
 .conteiner1 .sidebar img{
 	width: 50%;
