--- a/css/style.css
+++ b/css/style.css
@@ -292,10 +292,18 @@ body{
 	  opacity: 0.7;
 }
   
+
+
+
 .fa-instagram{
 	color: white;
 	float: right;
+	width: 45%;
 }
+
+
+
+
 
 .fa-laptop{
 	  color:sandybrown
